rmv'd template material in content, font change, local preview fix --ignoreCache

--- a/config.yaml
+++ b/config.yaml
@@ -30,8 +30,8 @@ menu:
 
 params:
 
-  name: Ben Cuan
-  title: 📓 Amethyst
+  name: картошечка 🥔 
+  title: ✒️💀 D R O P E N 
 
   # OPTIONAL: custom favicon location
   # favicon: 'location/to/favicon.png'
